# opentelemetry-ruby

./: .clomonitor.yml  .codespellignore  .codespellrc  .commit-me.json  .cspell.yml  .gitignore  .markdown-link-check.json  .markdownlint.json  .simplecov  .travis.yml  404.html  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Gemfile  Makefile  README.md  Rakefile  SPEC_COMPLIANCE.md  design.md  docker-compose.yml  index.html  test_all_gems.sh
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  renovate.json5
.instrumentation_generator/: instrumentation_generator.rb
.toys/: .toys.rb  ci.rb  refresh_appraisals.rb  release.rb  yardoc.rb
adapters/: datadog-porting-guide.md
api/: .rubocop.yml  .yardopts  CHANGELOG.md  Gemfile  OVERVIEW.md  README.md  Rakefile  opentelemetry-api.gemspec  opentelemetry.gemspec
ci/: rake_release.sh  rake_test.sh  rake_test_appraisal.sh  rake_test_appraisal_container_ints.sh
common/: .rubocop.yml  CHANGELOG.md  Gemfile  README.md  Rakefile  opentelemetry-common.gemspec
contrib/: Gemfile.shared  rubocop.yml
experimental_sdk/: .rubocop.yml  .yardopts  (+1 more)
sdk_rust/ext/: Cargo.toml  extconf.rb
sdk_rust/ext/opentelemetry_sdk_rust/: Cargo.toml  extconf.rb
sdk_rust/ext/src/: lib.rs  span.rs  tracer.rs  tracer_provider.rs
sdk_rust/ext/src/tokio_rb/: error.rs  helpers.rs  mod.rs  prelude.rs  runtime.rs
sdk_rust/ext/src/tokio_rb/helpers/: wrapped_struct.rs
sdk_rust/ext/src/tokio_rb/runtime/: builder.rs  enter_guard.rs  handle.rs
(+15429 files in other folders)
