[package]
name = "ext"
version = "0.0.1"
authors = ["OpenTelemetry Authors <cncf-opentelemetry-contributors@lists.cncf.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
opentelemetry = "0.18.0"
magnus = { git = "https://github.com/matsadler/magnus", features = ["rb-sys-interop"] }
rb-sys = "~0.9.44"
