[package]
name = "ext"
version = "0.0.1"
authors = ["OpenTelemetry Authors <cncf-opentelemetry-contributors@lists.cncf.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
magnus = { version = "0.4.3", features = ["rb-sys-interop"] }
rb-sys = "~0.9.46"
opentelemetry-otlp = "0.11.0"
tokio = { version = "1.23.0", features = [ "full" ] }
lazy_static = "1.4.0"
